syntax = "proto3";

package productcommunication;

service DanceCategories {
  rpc GetDanceCategories(GetDanceCategoriesRequest) returns (GetDanceCategoriesResponse);
}

enum Role {
  INSTRUCTOR = 0;
  COORDINATOR = 1;
  STUDENT = 2;
  ADMINISTRATOR = 3;
}


message GetDanceCategoriesRequest {
  repeated int64 id = 1;
}


message DanceCategory {
  int64 id = 1;
  string name = 2;
}

message GetDanceCategoriesResponse {
  repeated DanceCategory dance_categories = 1;
};